feature: added SQL script for tables and seed data